
* Thr Jul 26 2007 - 0.5.2 (RC)
- Have cobbler check ensure services are started
- Add cobbler validateks command to look for broken rendered kickstarts
- Added -v/--version
- Added SNIPPET::foo capability to pull /var/lib/cobbler/snippets/foo into templates (anywhere)
- Import can now take an --available-as=nfs://server:/mount/point to do cobbler import without mirroring

* Fri Jul 20 2007 - 0.5.1
- Added logging for cobblerd -- /var/log/cobbler/cobblerd.log
- Cobblerd now ignores XMLRPC IOError
- Added findks.cgi
- Misc bugfixing
- Added --virt-path, --virt-type

* Wed Jun 24 2007 - 0.5.0
- Remove hardcode of /var/www/cobbler in cobblerd
- Improve various warning warning messages
- cobbler (objecttype) (objectname) now gives info about the object instead of just all objects
- Added --hostname to "cobbler system add", --ip-address (or --ip) is also a better alias for the misnamed --pxe-address
- Optionally use dnsmasq for DHCP (and DNS!) instead of ISC dhcpd.
- Add --mac and remove requirement for --name to be an ip, mac, or hostname.
- Manpage cleanup
- Patch to allow pre and post triggers
- Patch to allow --createrepo-flags and to cache on import, fix multiple calls to createrepo
- Various modifications to allow for profile inheritance
- All variables in object tree now available for use in templating, nicer blending algorithms
- Optional override of --kickstart in system object

* Thu Apr 26 2007 - 0.4.8
- Make import friendlier for older distros
- Make import friendlier for newer createrepos that don't have --basedir

* Fri Apr 20 2007 - 0.4.7
- Disable mod_python tracker piece for RHEL5 (replacement eventual).
- Kickstart tracking now understands Apache logs
- Added support for --rpm-list parameter to "repo add" for download of partial content from repositories
  (ex: cobbler and koan from FC6extras, w/o games).
- More consistant naming on imports, regardless of data source.