@@ -12,6 +12,7 @@ include COPYING AUTHORS README CHANGELOG NEWS
 include scripts/watcher.py
 include scripts/cobblerd
 include scripts/findks.cgi
+include scripts/nopxe.cgi
 include snippets/*
 recursive-include po *.pot
 recursive-include po *.po
