@@ -71,6 +71,7 @@ test "x$RPM_BUILD_ROOT" != "x" && rm -rf $RPM_BUILD_ROOT
 %files
 %defattr(2744,apache,apache)
 /var/www/cgi-bin/findks.cgi
+/var/www/cgi-bin/nopxe.cgi
 %dir /var/log/cobbler
 %dir /var/log/cobbler/kicklog
 %dir /var/www/cobbler/
